force-app/main/default/objects/CTRFieldEditLog__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldList__c</fullName>
        <label>FieldList</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTRRequestFormHeader__c</fullName>
                    <default>true</default>
                    <label>CTRRequestFormHeader__c</label>
                </value>
                <value>
                    <fullName>CTRRequestFormItem__c</fullName>
                </value>
                <value>
                    <fullName>CTRShareholder__c</fullName>
                </value>
                <value>
                    <fullName>CTRShippingCountry__c</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Counter party</fullName>
                    <default>true</default>
                    <label>Counter party</label>
                </value>
                <value>
                    <fullName>SAP Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRFieldEditLog</label>
</CustomObject>